--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                                 
             </div>
           </div>
-        <div class="gitLink">
-            <a href="https://github.com/evannyguedes/Good-vibes-weather-app">Open-source code</a>, by Évanny Guedes Belarmino 
+        <div class="bottomLine">
+            <a href="https://github.com/evannyguedes/Good-vibes-weather-app" class="gitLink">Open-source code</a><spam>, by Évanny Guedes Belarmino </spam>
         </div>
     </div>
     
