Created the weather description
With two new divs

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
             <div class="card-body">
 
               <h1 class="city" id="current-city"> </h1>
-
+               <div class="moreInfo">
               <div class="dayTime" id="day-time">  </div>
-
+              <div class="weatherDescription">Clear</div>
+            </div>
               <form class="formCity" id="form-city">
                <div class="search-cities">
                   <input
