Changed the design
I'm trying to change the design to fit better with my idea of weather app

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 °C
              </h5>
             
-            <img src="media/sun.png" class="sun" />
+            <img src="media/sunny-image.png" class="sunnyImage" />
 
             <div class="row">
                 <div class="col-2">
