--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                   <span class="line"></span>
                </br>
               <h1 class="city" id="current-city"> </h1>
-               <div class="moreInfo">
-              <div class="dayTime" id="day-time">  </div>
-              <div class="weatherDescription" id="description">Clear</div>
-            </div>
+               <ul class="moreInfo">
+              <li class="dayTime" id="day-time"></li>
+              <li class="weatherDescription" id="description"></li>
+               </ul>
               <h2 class="now-temperature" id="temperature">    
             </h2>
              <h5>°C
@@ -89,7 +89,7 @@
                     23°C
                 </div>                     
             </div>
-            <img src="media/sunny-image.png" class="sunnyImage" />
+            <img src="media/sunny-image.png" class="weatherImage" id="icon" />
            
             <p class="motivacional">"Life can be beautiful like a sunny day."</p>
           </div>
