Found the problema to change the Images
Was in the case names, because wasn't matching with the main names

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     23°C
                 </div>                     
             </div>
-            <img src="media/sunny-image.png" class="weatherImage" id="icon" />
+            <img id="icon" src="media/sunny-image.png" class="weatherImage" />
            
             <p class="motivacional">"Life can be beautiful like a sunny day."</p>
           </div>
