Uptading Motivacional Messages

--- a/index.html
+++ b/index.html
@@ -91,10 +91,11 @@
             </div>
             <img id="icon" src="media/sunny-image.png" class="weatherImage" />
            
-            <p class="motivacional">"Life can be beautiful like a sunny day."</p>
+            <p class="motivacional" id="message"></p>
           </div>
         <div class="bottomLine">
             <a href="https://github.com/evannyguedes/Good-vibes-weather-app" class="gitLink">Open-source code</a><spam>, by Évanny Guedes Belarmino </spam>
+            <li class="pixabay">Images by <a href="https://pixabay.com/users/la_petite_femme-2212305/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=1278120">MJ Jin</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=1278120">Pixabay</a> </li>
         </div>
     </div>
     
