Changes in forecast and creation of background Images Function

--- a/index.html
+++ b/index.html
@@ -51,42 +51,72 @@
                  </br>
                     ☀️ 
                  </br>
-                    20°C
+                 <span class="forecast-max">
+                    20°
+                  </span>
+                  <span class="forecast-min">
+                     18°
+                   </span>
                 </div>
                 <div class="col-6">
                     SAT
                  </br>
                     🌧️
                  </br>
-                    16°C
+                 <span class="forecast-max">
+                  20°
+                </span>
+                <span class="forecast-min">
+                   18°
+                 </span>
                 </div>
                 <div class="col-6">
                     SUN
                  </br>
                     ☁️
                  </br>
-                    14°C
+                 <span class="forecast-max">
+                  20°
+                </span>
+                <span class="forecast-min">
+                   18°
+                 </span>
                 </div>
                 <div class="col-6">
                     MON
                  </br>
                     ⛅
                  </br>
-                   18°C
+                 <span class="forecast-max">
+                  20°
+                </span>
+                <span class="forecast-min">
+                   18°
+                 </span>
                 </div>
                 <div class="col-6">
                     TUE
                  </br>
                     ☀️
                  </br>
-                    20°C
+                 <span class="forecast-max">
+                  20°
+                </span>
+                <span class="forecast-min">
+                   18°
+                 </span>
                 </div>
                 <div class="col-6">
                     WED
                  </br>
                     ☀️
                  </br>
-                    23°C
+                 <span class="forecast-max">
+                  20°
+                </span>
+                <span class="forecast-min">
+                   18°
+                 </span>
                 </div>                     
             </div>
             <img id="icon" src="media/sunny-image.png" class="weatherImage" />
