Using JS to change the Forecast HTML

--- a/index.html
+++ b/index.html
@@ -45,80 +45,7 @@
                <li> Windy: <span id="wind"></span>km/h</li>
 
              </ul>
-            <div class="row">
-                <div class="col-6">
-                    FRI
-                 </br>
-                    ☀️ 
-                 </br>
-                 <span class="forecast-max">
-                    20°
-                  </span>
-                  <span class="forecast-min">
-                     18°
-                   </span>
-                </div>
-                <div class="col-6">
-                    SAT
-                 </br>
-                    🌧️
-                 </br>
-                 <span class="forecast-max">
-                  20°
-                </span>
-                <span class="forecast-min">
-                   18°
-                 </span>
-                </div>
-                <div class="col-6">
-                    SUN
-                 </br>
-                    ☁️
-                 </br>
-                 <span class="forecast-max">
-                  20°
-                </span>
-                <span class="forecast-min">
-                   18°
-                 </span>
-                </div>
-                <div class="col-6">
-                    MON
-                 </br>
-                    ⛅
-                 </br>
-                 <span class="forecast-max">
-                  20°
-                </span>
-                <span class="forecast-min">
-                   18°
-                 </span>
-                </div>
-                <div class="col-6">
-                    TUE
-                 </br>
-                    ☀️
-                 </br>
-                 <span class="forecast-max">
-                  20°
-                </span>
-                <span class="forecast-min">
-                   18°
-                 </span>
-                </div>
-                <div class="col-6">
-                    WED
-                 </br>
-                    ☀️
-                 </br>
-                 <span class="forecast-max">
-                  20°
-                </span>
-                <span class="forecast-min">
-                   18°
-                 </span>
-                </div>                     
-            </div>
+             <div class="weather-forecast" id="forecast"></div>
             <img id="icon" src="media/sunny-image.png" class="weatherImage" />
            
             <p class="motivacional" id="message"></p>
