--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Indie+Flower&display=swap" rel="stylesheet">
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<body>
+<body class="page-body">
     <div class="container">
         <div class="card">
            
-            <div class="card-body">
+            <div class="card-body" style="background:linear-gradient(180deg, rgb(162, 218, 246) 0%, rgb(195, 246, 246) 23%, rgb(250, 245, 245) 90%);">
                <form class="formCity" id="form-city">
                   <div class="search-cities">
                      <input
