--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="src/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Indie+Flower&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@700&family=Finger+Paint&family=Sunshiney&display=swap" rel="stylesheet">
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <body class="page-body">
     <div class="container">
@@ -31,23 +31,27 @@
                   </form>
                   <span class="line"></span>
                </br>
-              <h1 class="city" id="current-city"> </h1>
-               <ul class="moreInfo">
-              <li class="dayTime" id="day-time"></li>
-              <li class="weatherDescription" id="description"></li>
+              <h1 class="city" id="current-city" style="color:black;"> </h1>
+               <ul class="moreInfo" style="color:black;">
+              <li class="dayTime" id="day-time" style="color: black;"></li>
+              <li class="weatherDescription" id="description" style="color:black;"></li>
                </ul>
-              <h2 class="now-temperature" id="temperature">    
+              <h2 class="now-temperature" id="temperature" style="color:black;">    
             </h2>
-             <h5>°C
+             <h5 class="celsius" style="color:black;">°C
              </h5>
-             <ul class="underTemp">
+             <ul class="underTemp" style="color:black;">
                <li> Humidity: <span id="humidity"></span>%</li>
                <li> Windy: <span id="wind"></span>km/h</li>
 
              </ul>
              <div class="weather-forecast" id="forecast"></div>
+             <img src="media/tape.png" class="tape-img" />
+            </br>
             <img id="icon" src="media/sunny-image.png" class="weatherImage" />
-           
+          </br>
+            <span class="line-bottom"></span>
+          </br>
             <p class="motivacional" id="message"></p>
           </div>
         <div class="bottomLine">
