Some CSS changes

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                    <button class="lupa" type="submit">search</button>
                    <button class="current" id = "btn-current">find me</button>
                   </form>
-                  <span class="line"></span>
+                  <span class="line-top"></span>
                </br>
               <h1 class="city" id="current-city" style="color:black;"> </h1>
                <ul class="moreInfo" style="color:black;">
@@ -46,13 +46,12 @@
 
              </ul>
              <div class="weather-forecast" id="forecast"></div>
-             <img src="media/tape.png" class="tape-img" />
+             <img src="media/tape.png" class="yellow-tape" />
             </br>
             <img id="icon" src="media/sunny-image.png" class="weatherImage" />
-          </br>
-            <span class="line-bottom"></span>
-          </br>
             <p class="motivacional" id="message"></p>
+            <img src="media/pink-tape.png" class="pink-tape-l" />
+            <img src="media/pink-tape.png" class="pink-tape-r" />
           </div>
         <div class="bottomLine">
             <a href="https://github.com/evannyguedes/Good-vibes-weather-app" class="gitLink">Open-source code</a><spam>, by Évanny Guedes Belarmino </spam>
