Putting the Good Vibes Sticker

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <p class="motivacional" id="message"></p>
             <img src="media/pink-tape.png" class="pink-tape-l" />
             <img src="media/pink-tape.png" class="pink-tape-r" />
+            <img src="media/stick.png" class="sticker" />
           </div>
         <div class="bottomLine">
             <a href="https://github.com/evannyguedes/Good-vibes-weather-app" class="gitLink">Open-source code</a><spam>, by Évanny Guedes Belarmino </spam>
