Putting Search and Find me icons

--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
                        autofocus
                      />
                   </div>
-                  <button class="lupa" type="submit">search</button>
-                  <button class="current" id = "btn-current">find me</button>
+                  <button class="lupa" type="submit">
+                    <img src="media/magni.png" class="pin-img" >
+                  </button>
+                  <button class="current" id = "btn-current">
+                    <img src="media/pin.png" class="pin-img">
+                  </button>
                 </form>
                 <span class="line-top">
                 </span>
