--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=800" />">
+    <meta name="viewport" content="width=800" />
     <title>Good Vibes Weather APP</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="src/styles.css" />
@@ -23,15 +23,10 @@
                        placeholder="Enter a city..."
                        class="form-control"
                        id="show-city"
-                       autofocus
                      />
                   </div>
-                  <button class="lupa" type="submit">
-                    <img src="media/magni.png" class="pin-img" >
-                  </button>
-                  <button class="current" id = "btn-current">
-                    <img src="media/pin.png" class="pin-img">
-                  </button>
+                  <input type="image" src="media/magni.png" class="magni-img" />
+                  <input type="image" id = "btn-current" src="media/pin.png" class="pin-img"/>
                 </form>
                 <span class="line-top">
                 </span>
