--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                        id="show-city"
                      />
                   </div>
-                  <input type="image" src="media/magni.png" class="magni-img" />
-                  <input type="image" id = "btn-current" src="media/pin.png" class="pin-img"/>
+                  <input type="image" src="media/magni.png" class="magni-img" style="filter:none"/>
+                  <input type="image" id = "btn-current" src="media/pin.png" class="pin-img" style="filter:none"/>
                 </form>
                 <span class="line-top">
                 </span>
